[metadata]
name = rules-engine
version = 0.0.1
author = Fyndiq AB
author_email = support@fyndiq.com
description = Rules engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fyndiq/rules-engine
project_urls =
    Bug Tracker = https://github.com/fyndiq/rules-engine/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = ./src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .

[flake8]
max-line-length = 100
exclude =
    .git,
    .venv,
    .eggs,
    .undodir
    __pycache__
ignore = W504

[coverage:run]
branch = True
omit =
    .venv,
    .eggs,
    __pycache__,
    tests

[tool:pytest]
testpaths=tests
python_files=test_*.py
python_functions=test_*
python_classes = Test* *Tests
norecursedirs = .venv .git .eggs
addopts = -vv -p no:warnings --log-level=WARNING
junit_family=xunit1

[mypy]
ignore_missing_imports = True
show_error_context = True
pretty = True

[isort]
atomic=True
line_length=100
multi_line_output=3
include_trailing_comma=True
force_grid_wrap = 0
balanced_wrapping=True
known_localfolder=rules_engine
known_test=tests
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,FRAMEWORKS,LOCALFOLDER,TEST
virtual_env=.venv
skip=.venv
